versions/v4.1.0/build/dts/api/bindings/net/wireless/nordic,nrf21540-fem.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/build/dts/api/bindings/net/wireless/nordic,nrf21540-fem.html
original_path: build/dts/api/bindings/net/wireless/nordic,nrf21540-fem.html
---

# nordic,nrf21540-fem

Vendor: [Nordic Semiconductor](../../../bindings.md#dt-vendor-nordic)

## Description

```text
This is a representation of the nRF21540 Radio Front-End module.

See the "nordic,nrf21540-fem-spi" binding to configure the SPI
interface. The SPI interface should be configured as a child node
of the SPI bus you have connected to the FEM. Then you "connect"
the FEM and SPI configurations using the spi-if property.

Here is an example nRF21540 configuration with a SPI interface
selected, using the SPIM0 peripheral found on several nRF5 SoCs:

  &spi0 {
          compatible = "nordic,nrf-spim";
          status = "okay";
          cs-gpios = <&gpio1 3 GPIO_ACTIVE_LOW>;
          /* ... MISO/MOSI/SCK pin configuration goes here ... */

          my_spi_if: nrf21540-spi@0 {
                  compatible = "nordic,nrf21540-fem-spi";
                  reg = <0>;
                  spi-max-frequency = <8000000>;
          };
  };

  nrf_radio_fem: nrf21540 {
          compatible = "nordic,nrf21540-fem";
          tx-en-gpios = <&gpio0 2 GPIO_ACTIVE_HIGH>;
          rx-en-gpios = <&gpio0 5 GPIO_ACTIVE_HIGH>;
          spi-if = <&my_spi_if>;
          pdn-gpios = <...>;
          ant-sel-gpios = <...>;
          mode-gpios = <...>;
          /* ... other nRF21540 properties go here ... */
  };

  &radio {
          fem = <&nrf_radio_fem>;
  };

In the above example, the nRF21540 is configured for use with:

  - TX_EN on P0.2 (from 'tx-en-gpios')
  - RX_EN on P0.5 (from 'rx-en-gpios')
  - SPI communication via SPIM0 (the bus, or parent node, of
    the 'my_spi_if' node
  - CSN on P1.3 (from index 0 in the bus node's 'cs-gpios' property)

You must perform any additional required SPI pin configuration
(nRF21540 MISO, MOSI, and SCK pins) within the SPI bus node
('spi0' in the above example). See your SPI node's binding for
details on these pin mux properties. You can use any SPI node
available in your SoC's devicetree.

Configure any other nRF21540 pins as needed using 'pdn-gpios',
'ant-sel-gpios', and 'mode-gpios' properties. If unsure about the
format, use 'tx-en-gpios' as an example.

Finally, the nRF5 SoC's radio peripheral is set up for use with
the nRF21540 via the 'fem' property in the 'radio' node.
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `tx-en-gpios` | `phandle-array` | ```text GPIO of the SOC controlling TX_EN pin of the nRF21540 ``` |
| `rx-en-gpios` | `phandle-array` | ```text GPIO of the SOC controlling RX_EN pin of the nRF21540 ``` |
| `pdn-gpios` | `phandle-array` | ```text GPIO of the SOC controlling PDN pin of the nRF21540 ``` |
| `ant-sel-gpios` | `phandle-array` | ```text GPIO of the SOC controlling ANT-SEL pin of the nRF21540 ``` |
| `mode-gpios` | `phandle-array` | ```text GPIO of the SOC controlling MODE pin of the nRF21540 ``` |
| `spi-if` | `phandle` | ```text Reference to the nordic,nrf21540-fem-spi SPI bus interface.  This must be present to support SPI control of the FEM. ``` |
| `tx-en-settle-time-us` | `int` | ```text Settling time in microseconds from state PG to TX.  Default value is based on Table 6 of the nRF21540 Product Specification (v1.0), and can be overridden for tuned configurations. ```  Default value: `11` |
| `rx-en-settle-time-us` | `int` | ```text Settling time in microseconds from state PG to RX.  Default value is based on Table 6 of the nRF21540 Product Specification (v1.0), and can be overridden for tuned configurations. ```  Default value: `11` |
| `pdn-settle-time-us` | `int` | ```text Settling time in microseconds from state PD to PG.  Default value is based on Table 6 of the nRF21540 Product Specification (v1.0), and can be overridden for tuned configurations. ```  Default value: `18` |
| `trx-hold-time-us` | `int` | ```text Power-off time in microseconds when changing from RX or TX to PG.  Default value is based on Table 6 of the nRF21540 Product Specification (v1.0), and can be overridden for tuned configurations. ```  Default value: `3` |
| `supply-voltage-mv` | `int` | ```text nRF21540 supply voltage in mV.  This is used if compensation for nRF21540 supply voltage is supported by software. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “nordic,nrf21540-fem” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text Indicates the operational status of the hardware or other resource that the node represents. In particular:    - "okay" means the resource is operational and, for example,     can be used by device drivers   - "disabled" means the resource is not operational and the system     should treat it as if it is not present  For details, see "2.3.4 status" in Devicetree Specification v0.4. ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text This property is a list of strings that essentially define what type of hardware or other resource this devicetree node represents. Each device driver checks for specific compatible property values to find the devicetree nodes that represent resources that the driver should manage.  The recommended format is "vendor,device", The "vendor" part is an abbreviated name of the vendor. The "device" is usually from the datasheet.  The compatible property can have multiple values, ordered from most- to least-specific. Having additional values is useful when the device is a specific instance of a more general family, to allow the system to match the most specific driver available.  For details, see "2.3.1 compatible" in Devicetree Specification v0.4. ```  This property is **required**.  See [Important properties](../../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text Information used to address the device. The value is specific to the device (i.e. is different depending on the compatible property).  The "reg" property is typically a sequence of (address, length) pairs. Each pair is called a "register block". Values are conventionally written in hex.  For details, see "2.3.6 reg" in Devicetree Specification v0.4. ```  See [Important properties](../../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text Optional names given to each register block in the "reg" property. For example:    / {        soc {            #address-cells = <1>;            #size-cells = <1>;             uart@1000 {                reg = <0x1000 0x2000>, <0x3000 0x4000>;                reg-names = "foo", "bar";            };        };   };  The uart@1000 node has two register blocks:    - one with base address 0x1000, size 0x2000, and name "foo"   - another with base address 0x3000, size 0x4000, and name "bar" ``` |
| `interrupts` | `array` | ```text Information about interrupts generated by the device, encoded as an array of one or more interrupt specifiers. The format of the data in this property varies by where the device appears in the interrupt tree. Devices with the same "interrupt-parent" will use the same format in their interrupts properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ```  See [Important properties](../../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text Extended interrupt specifier for device, used as an alternative to the "interrupts" property.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-names` | `string-array` | ```text Optional names given to each interrupt generated by a device. The interrupts themselves are defined in either "interrupts" or "interrupts-extended" properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-parent` | `phandle` | ```text If present, this refers to the node which handles interrupts generated by this device.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `label` | `string` | ```text Human readable string describing the device. Use of this property is deprecated except as needed on a case-by-case basis.  For details, see "4.1.2 Miscellaneous Properties" in Devicetree Specification v0.4. ```  See [Important properties](../../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `clocks` | `phandle-array` | ```text Information about the device's clock providers. In general, this property should follow conventions established in the dt-schema binding:    https://github.com/devicetree-org/dt-schema/blob/main/dtschema/schemas/clock/clock.yaml ``` |
| `clock-names` | `string-array` | ```text Optional names given to each clock provider in the "clocks" property. ``` |
| `#address-cells` | `int` | ```text This property encodes the number of <u32> cells used by address fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `#size-cells` | `int` | ```text This property encodes the number of <u32> cells used by size fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `dmas` | `phandle-array` | ```text DMA channel specifiers relevant to the device. ``` |
| `dma-names` | `string-array` | ```text Optional names given to the DMA channel specifiers in the "dmas" property. ``` |
| `io-channels` | `phandle-array` | ```text IO channel specifiers relevant to the device. ``` |
| `io-channel-names` | `string-array` | ```text Optional names given to the IO channel specifiers in the "io-channels" property. ``` |
| `mboxes` | `phandle-array` | ```text Mailbox / IPM channel specifiers relevant to the device. ``` |
| `mbox-names` | `string-array` | ```text Optional names given to the mbox specifiers in the "mboxes" property. ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers relevant to the device. ``` |
| `power-domain-names` | `string-array` | ```text Optional names given to the power domain specifiers in the "power-domains" property. ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
